<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movieFragment"
        android:icon="@drawable/ic_movies"
        android:title="@string/movie" />

    <item
        android:id="@+id/tvShowFragment"
        android:icon="@drawable/ic_tv_show"
        android:title="@string/tv_show" />

</menu>